# scanner-app

./: CLEANUP_REPORT.md  MERGE_REVIEW.md  MOCK_DATABASE_README.md  NIFTY50_hour.csv  PHASE6_PHASE7_IMPLEMENTATION.md  README-phs-5.md  chat-gtp.md  docker-compose.dev.yml  export_structure_20260417_233339.sql  run-backend.bat  run-frontend.bat  run-tests.bat  stock-analysis-developer-technical-spec.md  validate-setup.bat
.github/workflows/: backend.yml  desktop.yml  frontend.yml
backend/: pom.xml
db/readmodels/: app_ui.instrument_latest_snapshot.sql  app_ui.instrument_trend_distribution_daily.sql  app_ui_audit_and_auth.sql  app_ui_user_preferences.sql
frontend/: .env  index.html  package.json  vite.config.ts
frontend/chart-workbench/: ChartPane.tsx  MultiTimeframeChartSet.tsx
frontend/desktop/: TAURI_NOTES.md
frontend/src/: main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/stores/: alert-console.store.ts  chart-workbench.store.ts  rule-lab.store.ts  snapshot-inspector.store.ts  watchlist-console.store.ts  workspace-layout.store.ts
frontend/types/: admin-jobs.types.ts  alert.types.ts  chart.types.ts  common.types.ts  dashboard.types.ts  instrument.types.ts  rule-lab.types.ts  watchlist.types.ts  workspace.types.ts
frontend/workspace-layout/: DockingWorkspace.tsx  flexlayout-model.ts
scripts/: find_duplicate_suffix_files.sh
scripts/dev/: apply_readmodels.sh  bootstrap-db.sql
specs/new-code/: implementation-plan.md  implementation-tasks.csv  (+1 more)
specs/new-code/stock-analysis-phase25-phase3/stock-analysis-starter/frontend/src-tauri/: Cargo.toml
(+220 files in other folders)
