[package]
name = "stock-analysis-workstation"
version = "0.0.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "stock_analysis_workstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
